WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107448
Web Inspector: [REGRESSION] Forced :visited pseudoclass has no effect on A elements
https://bugs.webkit.org/show_bug.cgi?id=107448
Summary
Web Inspector: [REGRESSION] Forced :visited pseudoclass has no effect on A el...
Alexander Pavlov (apavlov)
Reported
2013-01-21 06:48:07 PST
Upstreaming
https://code.google.com/p/chromium/issues/detail?id=168966
Attachments
Patch
(3.06 KB, patch)
2013-01-21 06:53 PST
,
Alexander Pavlov (apavlov)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2013-01-21 06:53:46 PST
Created
attachment 183777
[details]
Patch
Antti Koivisto
Comment 2
2013-01-21 06:55:42 PST
Comment on
attachment 183777
[details]
Patch r=me
Alexander Pavlov (apavlov)
Comment 3
2013-01-21 06:58:51 PST
Committed
r140331
: <
http://trac.webkit.org/changeset/140331
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug