Web Inspector: [REGRESSION] Forced :visited pseudoclass has no effect on A elements https://bugs.webkit.org/show_bug.cgi?id=107448

Reviewed by Antti Koivisto.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::sortAndTransferMatchedRules): Remove totally bad code.
(WebCore::StyleResolver::styleForElement):
  Use InsideVisitedLink if PseudoVisited has been forced by Inspector.

Canonical link: https://commits.webkit.org/125684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140331 268f45cc-cd09-0410-ab3c-d52691b4dbfc